# mcpvault

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SCHEMA.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
docs/docs/: index.md
docs/docs/concepts/: datalog-reference.md  how-it-works.md
docs/docs/getting-started/: cli.md  express.md  python.md
docs/docs/guides/: migrate-from-api-keys.md  multi-agent-delegation.md
mcpvault-cli/: Cargo.toml
mcpvault-cli/src/: main.rs
mcpvault-cli/tests/: cli_tests.rs
mcpvault-core/: Cargo.toml
mcpvault-core/benches/: verify_depth5.rs
mcpvault-core/src/: lib.rs  policy.rs  provider.rs  transport.rs  types.rs
mcpvault-core/tests/: mcp_integration.rs  provider_tests.rs
mcpvault-express/: package.json
mcpvault-express/src/: index.js
mcpvault-express/tests/: middleware.test.js
mcpvault-python/: Cargo.toml  pyproject.toml
mcpvault-python/mcpvault/: __init__.py
mcpvault-python/mcpvault/middleware/: fastapi.py
mcpvault-python/src/: lib.rs
mcpvault-python/tests/: test_mcpvault.py  test_middleware_fastapi.py
tasks/: lessons.md  todo.md
