[package]
name = "mcpvault-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for mcpvault capability-token management"
license = "Apache-2.0"
repository = "https://github.com/supashramesha/agentvault"
homepage = "https://github.com/supashramesha/agentvault"
keywords = ["mcp", "biscuit", "authorization", "cli", "tokens"]
categories = ["authentication", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "mcpvault"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
mcpvault-core = { path = "../mcpvault-core" }
biscuit-auth = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
