[package]
name = "mcpvault-core"
version = "0.1.0"
edition = "2021"
description = "Biscuit-based capability-token SDK for MCP authorization"

[dependencies]
biscuit-auth = "6.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "verify_depth5"
harness = false
